<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask"
    tools:visibility="visible">

    <EditText
        android:id="@+id/doSomethingText"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="384dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/do_something"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        android:text="@string/add_task"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskName"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/my_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="@string/add_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doSomethingText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_tasks_0"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTask" />

    <TextView
        android:id="@+id/addTaskPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Submitted" />

    <TextView
        android:id="@+id/taskTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/taskName"
        android:text="@string/task_title"
        app:layout_constraintBottom_toTopOf="@+id/taskName"
        app:layout_constraintStart_toStartOf="@+id/taskName" />

    <TextView
        android:id="@+id/textDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/doSomethingText"
        android:text="@string/text_description"
        app:layout_constraintBottom_toTopOf="@+id/doSomethingText"
        app:layout_constraintStart_toStartOf="@+id/doSomethingText" />

</androidx.constraintlayout.widget.ConstraintLayout>